# chudcoin

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  chud_coin  cmake_install.cmake  compile_commands.json
src/: CMakeLists.txt  block.cpp  block.h  main.cpp  utc_data.cpp  utc_data.h
